deployment/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-deployment
  labels:
    app: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: cart:v1
        ports:
        - containerPort: 10002
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart
  ports:
  - protocol: TCP
    port: 10002
    targetPort: 10002
