deployment/movie-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-mongo-deployment
  labels:
    app: movie-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-mongo
  template:
    metadata:
      labels:
        app: movie-mongo
    spec:
      containers:
      - name: mongodb
        image: mongo:5.0.6
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: movie-mongo-service
spec:
  selector:
    app: movie-mongo
  ports:
  - protocol: TCP
    port: 27018
    targetPort: 27017
