deployment/movie.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-deployment
  labels:
    app: movie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie
  template:
    metadata:
      labels:
        app: movie
    spec:
      containers:
      - name: movie
        image: movie:v1
        ports:
        - containerPort: 10001
---
apiVersion: v1
kind: Service
metadata:
  name: movie-service
spec:
  selector:
    app: movie
  ports:
  - protocol: TCP
    port: 10001
    targetPort: 10001
