deployment/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-store-webapp
  labels:
    app: movie-store-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-store-webapp
  template:
    metadata:
      labels:
        app: movie-store-webapp
    spec:
      containers:
      - name: movie-store-webapp
        image: moviewebapp:v1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: movie-store-service
spec:
  selector:
    app: movie-store-webapp
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
