deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
spec:
  rules:
  - host: online-store.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movie-store-service
            port:
              number: 3000
      - path: /api/customer
        pathType: Prefix
        backend:
          service:
            name: customer-service
            port:
              number: 10000
      - path: /api/movie
        pathType: Prefix
        backend:
          service:
            name: movie-service
            port:
              number: 10001
      - path: /api/cart
        pathType: Prefix
        backend:
          service:
            name: cart-service
            port:
              number: 10002
      - path: /api/order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 10003
      - path: /api/payment
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 10004
